After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732443 - Inspector hide and seek
Inspector hide and seek
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Debugging
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-06-29 19:32 UTC by Robert Roth
Modified: 2014-07-03 02:56 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Robert Roth 2014-06-29 19:32:45 UTC
Steps to reproduce:

1. Open a GTK+ application
2. Press Ctrl+Shift+D for debugging (inspector should come up, with the question dialog asking if I want to use the debugger - do not dismiss this dialog)
3. Being impatient, press Ctrl+Shift+D again (inspector is hidden, along with the dialog)
4. Press Ctrl+Shift+D again to display inspector
Expected:
the question dialog appears again, or inspector is working
What happens:
the question dialog does not appear, and the inspector dialog does not react to anything, probably because the modal question dialog from the previously hidden and redisplayed inspector blocks the interface